@@ -5960,6 +5960,7 @@ Version 1.6.32beta10 [August 4, 2017]
   Added the --xfail (expected FAIL) option to pngtest.c. It writes XFAIL
     in the output but PASS for the libpng test.
   Require cmake-3.0.2 in CMakeLists.txt (Clifford Yapp).
+  Fix "const" declaration info_ptr argument to png_get_eXIf_1().
 
 Send comments/corrections/commendations to png-mng-implement at lists.sf.net
 (subscription required; visit
